--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,12 +1,12 @@
 ---
-title: "Welcome to OneFlow Jekyll Theme"
+title: "COMP7705: ChainifyProp"
 
 layout: page
 
 permalink: /
 
 header:
-    overlay_image: /assets/images/header.webp
+    overlay_image: /assets/images/header_blockchain.webp
     overlay_filter: rgba(0, 0, 0, 0.6)
 
     actions:
@@ -17,9 +17,9 @@ header:
           url: https://github.com/mmistakes/minimal-mistakes
           blank: true
 
-    caption: "Photo by **[Alexandros Margo Photography](https://www.instagram.com/alexandrosmargo?igsh=eHl2cGx0amVocmJi)**"
+    caption: "Photo by **[United States Property Inc.](https://usp.io/the-impact-of-blockchain-technology-in-real-estate-transactions/)**"
 
-excerpt: "**Crafting effortless One-Pager Websites**"
+excerpt: "**Implementation of Blockchain Technology to digitalize property deed for transaction, mortgage, and building orders**"
 
 
 
@@ -334,5 +334,16 @@ image-text-row-two:
     All of OneFlows features are 100% responsive and adapt to different screen sizes, so your site looks good
     on all devices!
 
+
+</section>
+
+<hr class="section-sep">
+
+
+<section class="site-section" id="detailed-timeline">
+
+    <h1>This is timeline</h1>
+
+   
 
 </section>
